@@ -1,3 +1,7 @@
+2013-07-28  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* frame.c (delete_frame): Avoid unnecessary 'this_f' test (Bug#14970).
+
 2013-07-28  Eli Zaretskii  <eliz@gnu.org>
 
 	* w32fns.c (w32_wnd_proc) <WM_IME_STARTCOMPOSITION>: Make sure the
